[#316] Added fix to force rendering of a scrollbar in partner site project listing widget.

--- a/akvo/mediaroot/ps_widgets/projectList.css
+++ b/akvo/mediaroot/ps_widgets/projectList.css
@@ -13,6 +13,8 @@ ul.thead li {float:left; 	text-align: left;
 .darkBG .projectListWidget { color: rgb(214,214,214); }
 .lightBG .projectListWidget { color: rgb(32,32,36); }
 .projectListWidget td {
+    height: 100%;
+    margin: 0 0 1px;
 	vertical-align: top;
 	padding: 0.5em 0.25em;
 	border-bottom: 1px solid rgb(34,34,34);
